// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Store enqueues a track 1`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "isPlaying": false,
      "nowPlayingIndex": 0,
      "queue": Array [
        Object {
          "name": "some cool track!",
        },
      ],
      Symbol(id): "$ROOT_QUERY.mediaPlayer",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store switches between tracks 1`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "isPlaying": false,
      "nowPlayingIndex": 0,
      "queue": Array [
        Object {
          "name": "some cool track!",
        },
        Object {
          "name": "another cool track!",
        },
      ],
      Symbol(id): "$ROOT_QUERY.mediaPlayer",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store switches between tracks 2`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "isPlaying": false,
      "nowPlayingIndex": 1,
      "queue": Array [
        Object {
          "name": "some cool track!",
        },
        Object {
          "name": "another cool track!",
        },
      ],
      Symbol(id): "$ROOT_QUERY.mediaPlayer",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store switches between tracks 3`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "isPlaying": false,
      "nowPlayingIndex": 0,
      "queue": Array [
        Object {
          "name": "some cool track!",
        },
        Object {
          "name": "another cool track!",
        },
      ],
      Symbol(id): "$ROOT_QUERY.mediaPlayer",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store switches between tracks 4`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "isPlaying": false,
      "nowPlayingIndex": 1,
      "queue": Array [
        Object {
          "name": "some cool track!",
        },
        Object {
          "name": "another cool track!",
        },
      ],
      Symbol(id): "$ROOT_QUERY.mediaPlayer",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store updates player state 1`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "isPlaying": false,
      "nowPlayingIndex": 0,
      "queue": Array [
        Object {
          "name": "some cool track!",
        },
      ],
      Symbol(id): "$ROOT_QUERY.mediaPlayer",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store updates player state 2`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "isPlaying": true,
      "nowPlayingIndex": 0,
      "queue": Array [
        Object {
          "name": "some cool track!",
        },
      ],
      Symbol(id): "$ROOT_QUERY.mediaPlayer",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;
